<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku Solver</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_clear">Clear</string>
    <string name="title_activity_display">Display</string>
    <string name="title_activity_sector">Sector</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_solve">Solution</string>
    <string name="pound">#</string>
    <string name="view">View</string>
    <string name="clear">Clear</string>
    <string name="solve">Solve</string>
    <string name="x">x</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="back">Back</string>
    <string name="clearQuery">Clear data?</string>
    <string name="yes">Yes</string>
    <string name="errorInvalid">ERROR: Invalid Sudoku input</string>

</resources>
