<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClearActivity" >

    <TextView
        android:id="@+id/textClearQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/clearQuery"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonYesClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textClearQuery"
        android:layout_toLeftOf="@+id/textClearQuery"
        android:onClick="clearMatrix"
        android:text="@string/yes" />

    <Button
        android:id="@+id/buttonNoClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonYesClear"
        android:layout_alignBottom="@+id/buttonYesClear"
        android:layout_toRightOf="@+id/textClearQuery"
        android:onClick="gotoMain1"
        android:text="@string/back" />

</RelativeLayout>
