<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonS1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gotoS1"
                android:text="@string/pound" />

            <Button
                android:id="@+id/buttonS2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gotoS2"
                android:text="@string/pound" />

            <Button
                android:id="@+id/buttonS3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gotoS3"
                android:text="@string/pound" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonS4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gotoS4"
                android:text="@string/pound" />

            <Button
                android:id="@+id/buttonS5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gotoS5"
                android:text="@string/pound" />

            <Button
                android:id="@+id/buttonS6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gotoS6"
                android:text="@string/pound" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonS7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gotoS7"
                android:text="@string/pound" />

            <Button
                android:id="@+id/buttonS8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gotoS8"
                android:text="@string/pound" />

            <Button
                android:id="@+id/buttonS9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="gotoS9"
                android:text="@string/pound" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSolve"
        android:layout_alignBottom="@+id/buttonSolve"
        android:layout_alignLeft="@+id/tableLayout1"
        android:onClick="gotoDisplay"
        android:text="@string/view" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_toRightOf="@+id/buttonView"
        android:onClick="gotoClear"
        android:text="@string/clear" 
         />

    <Button
        android:id="@+id/buttonSolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonClear"
        android:layout_alignBottom="@+id/buttonClear"
        android:layout_toRightOf="@+id/buttonClear"
        android:onClick="gotoSolve"
        android:text="@string/solve"
        />

</RelativeLayout>